Website updates for release, better handling of Canada

--- a/website/index.html
+++ b/website/index.html
@@ -83,25 +83,27 @@
             <div class="row">
                 <div class="col-sm-5 text-center">
                     <img class="main-icon" src="little_family_logo.png" border="0" />
+                    <p class="beta">
+                        Little Family Tree is now available on your favorite android app store. An iOS version will be available in early 2016.
+                    </p>
                     <p>&nbsp;</p>
                     <!--
-                    <p class="beta">
-                        Little Family Tree is currently in beta.
-                    </p>
                     <p>
                         <button type="button" onclick="showContactForm(); return false;" class="btn btn-primary btn-xs">Contact Us!</button>
                         for information about participating in the beta program.
                     </p>
                     -->
                     <p>
-                        <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree">
+                        <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
                             <img alt="Android app on Google Play" width="172"
                                  src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png" />
                         </a>
-                        <a href="http://www.amazon.com/gp/product/M1O1FB42K12UE1/ref=mas_pm_little_family_tree">
+
+                        <a href="http://www.amazon.com/gp/product/B014FPGQJO">
                             <img alt="Android app on Amazon App Store" width="172"
                                  src="amazon-underground-app-us-black.png" />
                         </a>
+
                     </p>
                 </div>
                 <div class="col-sm-7">
@@ -114,7 +116,7 @@
                     </p>
                     <p>
                         Personal family history information is obtained by having an adult login to an online family tree such as
-                        <a href="http://www.familyearch.org">FamilySearch</a> or <a href="http://www/phpgedview.net">PhpGedView</a>.
+                        <a href="http://www.familyearch.org">FamilySearch</a> or <a href="http://www.phpgedview.net">PhpGedView</a>.
                         An online family tree account is required to play the game but a <a href="http://www.familyearch.org">FamilySearch</a>
                         account can be obtained for free at <a href="http://www.familyearch.org">FamilySearch.org</a>.
                     </p>
