--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="littlefamily.css">
 
@@ -33,6 +34,9 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="socialbuttons">
+            <a class="socialmedia" href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square"></i></a>
+        </div>
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="#page-top">
                 <img class="icon" src="home.png" border="0" height="45" />
@@ -44,9 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-left">
@@ -246,19 +248,31 @@
                 <h2 class="section-heading">About Little Family Tree</h2>
                 <hr class="primary">
                 <p>Little Family Tree is a product of <a href="http://www.yellowforktech.com">Yellow Fork Technologies LLC</a></p>
-                <p>Your privacy is extremely important to us.  We promise not to share your personal information.
-                    <br /><a href="privacy.html">Read our full privacy policy.</a></p>
                 <p>&nbsp;</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-lg-offset-2 text-center">
+            <div class="contact-section col-lg-3 col-lg-offset-2 col-sm-4 text-left">
                 <button type="button" onclick="showContactForm(); return false;" class="btn btn-primary">Contact Us!</button>
             </div>
-            <div class="col-lg-4 text-center">
+
+            <div class="contact-section col-lg-3 col-sm-4 text-center">
+                <p>
+                    <a href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square socialmedia"></i> Facebook Page</a>
+                </p>
+            </div>
+
+            <div class="contact-section col-lg-3 col-sm-4 text-center">
                 <address>Yellow Fork Technologies LLC
                 <br />5526 W. 13400 S. #448
                 <br />Herriman, UT  84096</address>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p>&nbsp;</p>
+                <p>Your privacy is extremely important to us.  We promise not to share your personal information.
+                    <br /><a href="privacy.html">Read our full privacy policy.</a></p>
             </div>
         </div>
         <div class="row">
