--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="littlefamily.css">
 
@@ -39,6 +40,9 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="socialbuttons">
+            <a class="socialmedia" href="http://www.facebook.com/LittleFamilyTree" title="Visit Little Family Tree on Facebook"><i class="fa fa-facebook-square"></i></a>
+        </div>
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="index.html">
                 <img class="icon" src="home.png" border="0" height="45" />
