Fix no people to choose bug for people with not children

--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -118,7 +118,7 @@
                 </ol>
             </p>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-sm-3 text-center">
             <img class="guide-image" src="little_family_logo.png" />
         </div>
     </div>
@@ -145,7 +145,7 @@
                 settings.
             </p>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-sm-3 text-center">
             <img class="guide-image" src="guide_full_tree.png" />
         </div>
     </div>
@@ -163,8 +163,8 @@
                 tell your child your earliest memories of someone in the game.
             </p>
         </div>
-        <div class="col-sm-2 text-center">
-
+        <div class="col-sm-3 text-center">
+			<img class="guide-image" src="game_icons/parentsguide_background.png" />
         </div>
     </div>
 
@@ -186,7 +186,7 @@
                 the player's profile picture on the activity screens.
             </p>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-sm-3 text-center">
             <img class="guide-image" src="guide_choose.png" />
         </div>
     </div>
@@ -204,7 +204,7 @@
                 Return to the home at anytime by touching the home button at the top of every screen.
             </p>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-sm-3 text-center">
             <img class="guide-image" src="home.png" />
         </div>
     </div>
@@ -222,7 +222,7 @@
                 about individual games.
             </p>
         </div>
-        <div class="col-sm-2 text-center" style="position: relative;">
+        <div class="col-sm-3 text-center" style="position: relative;">
             <img class="star" src="star1.png" />
             <img class="star" src="star1.png" />
             <img class="star" src="star1.png" />
@@ -245,7 +245,7 @@
                 return to this parent's guide at anytime from the settings screen.
             </p>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-sm-3 text-center">
 
         </div>
     </div>
