--- a/website/bubbles.html
+++ b/website/bubbles.html
@@ -89,8 +89,11 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
             <h2 class="section-heading"><img src="game_icons/bubbles3.png" height="60" />&nbsp; Relationship Bubbles Game</h2>
             <hr class="primary">
-            <p>&nbsp;</p>
         </div>
+    </div>
+	<div class="row text-center">
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/LnIylZLL-Fk?rel=0" frameborder="0" allowfullscreen></iframe>
+		<p>&nbsp;</p>
     </div>
     <div class="row">
         <div class="col-sm-6 col-lg-offset-1">
