--- a/website/index.html
+++ b/website/index.html
@@ -55,11 +55,11 @@
                 <li>
                     <a class="page-scroll" href="#page-top">Home</a>
                 </li>
-                <!--
+                
                 <li>
                     <a class="page-scroll" href="#video">Video</a>
                 </li>
-                -->
+                
                 <li>
                     <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
                 </li>
@@ -141,25 +141,23 @@
         </div>
     </div>
 </header>
-<!--
+
 <section class="bg-primary" id="video">
     <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="section-heading">Video 1</h2>
-                <img src="growing_plant7.png" />
-            </div>
-
-            <div class="col-md-6 text-center">
-                <h2 class="section-heading">Video 2</h2>
-                <img src="growing_plant7.png" />
+				<div class="small-show">
+					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+				</div>
+                <div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Yw2JffwCJKY?rel=0" allowfullscreen></iframe>  
+				</div>
             </div>
 
         </div>
     </div>
 </section>
--->
 
 <section id="games">
     <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
