--- a/website/bubbles.html
+++ b/website/bubbles.html
@@ -91,10 +91,6 @@
             <hr class="primary">
         </div>
     </div>
-	<div class="row text-center">
-        <iframe width="480" height="360" src="https://www.youtube.com/embed/LnIylZLL-Fk?rel=0" frameborder="0" allowfullscreen></iframe>
-		<p>&nbsp;</p>
-    </div>
     <div class="row">
         <div class="col-sm-6 col-lg-offset-1">
             <p>
@@ -120,6 +116,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/LnIylZLL-Fk?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_bubbles.png"><img class="guide-image" src="Screenshot_bubbles.png" border="0"/></a>
         </div>
     </div>
