--- a/website/index.html
+++ b/website/index.html
@@ -28,6 +28,11 @@
             font-weight: bold;
             color: green;
         }
+        header .header-content, section .container, section .container-fluid{
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
