--- a/website/matching.html
+++ b/website/matching.html
@@ -111,6 +111,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/XNAcryc6UzU?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_matching.png"><img class="guide-image" src="Screenshot_matching.png" border="0"/></a>
         </div>
     </div>
