--- a/website/puzzle.html
+++ b/website/puzzle.html
@@ -117,6 +117,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/QxnTXDLJi24?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_puzzle.png"><img class="guide-image" src="Screenshot_puzzle.png" border="0"/></a>
         </div>
     </div>
