--- a/website/watercolor.html
+++ b/website/watercolor.html
@@ -112,6 +112,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/oEZi5Y3181M?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_watercolor.png"><img class="guide-image" src="Screenshot_watercolor.png" border="0"/></a>
         </div>
     </div>
