Don't use the same people as often

--- a/website/index.html
+++ b/website/index.html
@@ -93,13 +93,6 @@
                     <p class="beta">
                         Little Family Tree is now available on your favorite android app store. An iOS version will be available in early 2016.
                     </p>
-                    <p>&nbsp;</p>
-                    <!--
-                    <p>
-                        <button type="button" onclick="showContactForm(); return false;" class="btn btn-primary btn-xs">Contact Us!</button>
-                        for information about participating in the beta program.
-                    </p>
-                    -->
                     <p>
                         <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
                             <img alt="Android app on Google Play" width="172"
@@ -112,6 +105,7 @@
                         </a>
 
                     </p>
+                    <p>&nbsp;</p>
                 </div>
                 <div class="col-sm-7">
                     <h2 class="text-center">Introducing the youngest minds to their heritage</h2>
@@ -143,6 +137,8 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
     </div>
 </header>
@@ -238,6 +234,18 @@
                         Parent's Guide
                     </div>
                 </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-offset-4 col-md-6">
+            <p>&nbsp;</p>
+            <p>
+                <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">
+                    <img width="150" src="ldstech2015.jpg" align="left" style="margin-right: 10px; "/>
+                </a>
+                Little Family Tree won 3rd place in the Children's category of the 2015
+                <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">LDSTech App and Game contest.</a>
+            </p>
             </div>
         </div>
     </div>
