--- a/website/dressup.html
+++ b/website/dressup.html
@@ -131,6 +131,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/uDdiKdUKhWE?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_heritage_calc.png"><img class="guide-image" src="Screenshot_heritage_calc.png" border="0"/></a>
         </div>
     </div>
