--- a/website/scratch.html
+++ b/website/scratch.html
@@ -103,6 +103,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/CFQy3jCfIxo?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_scratch.png"><img class="guide-image" src="Screenshot_scratch.png" border="0"/></a>
         </div>
     </div>
