--- a/website/tree.html
+++ b/website/tree.html
@@ -119,6 +119,9 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
+            <div class="game-video embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/6YdVmS1Q2NE?rel=0" frameborder="0" allowfullscreen></iframe>
+            </div>
             <a href="Screenshot_tree.png"><img class="guide-image" src="Screenshot_tree.png" border="0"/></a>
         </div>
     </div>
