--- a/website/index.html
+++ b/website/index.html
@@ -22,18 +22,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <style type="text/css">
-        .beta {
-            font-weight: bold;
-            color: green;
-        }
-        header .header-content, section .container, section .container-fluid{
-            width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
 </head>
 <body>
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -84,57 +72,33 @@
     <!-- /.container-fluid -->
 </nav>
 
-<header class="content-start" id="page-top">
+<header class="" id="page-top">
     <div class="header-content">
         <div class="header-content-inner container-fluid">
             <div class="row">
                 <div class="col-sm-5 text-center">
-                    <img class="main-icon" src="little_family_logo.png" border="0" />
+                    <img class="main-icon" src="ic_launcher-web.png" border="0" />
                     <p class="beta">
-                        Little Family Tree is now available on your favorite android app store. An iOS version will be available in early 2016.
+                        An iOS version will be available in early 2016.
                     </p>
                     <p>
                         <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
-                            <img alt="Android app on Google Play" width="172"
-                                 src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png" />
+                            <img alt="Android app on Google Play" width="180"
+                                 src="googel-play-badge.png" />
                         </a>
 
                         <a href="http://www.amazon.com/gp/product/B014FPGQJO">
-                            <img alt="Android app on Amazon App Store" width="172"
+                            <img alt="Android app on Amazon App Store" width="160"
                                  src="amazon-underground-app-us-black.png" />
                         </a>
 
                     </p>
                     <p>&nbsp;</p>
                 </div>
-                <div class="col-sm-7">
-                    <h2 class="text-center">Introducing the youngest minds to their heritage</h2>
-                    <hr>
-                    <p>
-                        Little Family Tree engages toddlers and pre-school children with their personal heritage and family history
-                        through photos, games, and activities designed for their level. (Most of the games are fun for the
-                        kid in all of us.)
-                    </p>
-                    <p>
-                        Personal family history information is obtained by having an adult login to an online family tree such as
-                        <a href="http://www.familyearch.org">FamilySearch</a> or <a href="http://www.phpgedview.net">PhpGedView</a>.
-                        An online family tree account is required to play the game but a <a href="http://www.familyearch.org">FamilySearch</a>
-                        account can be obtained for free at <a href="http://www.familyearch.org">FamilySearch.org</a>.
-                    </p>
-                    <p>&nbsp;</p>
-                    <div class="row">
-                        <div class="col-sm-6 text-center">
-                            <p>&nbsp;</p>
-                            <button type="button" onclick="window.location='familysearch.html'; return false;"
-                                    class="btn btn-primary">Learn more about our<br />FamilySearch
-                                integration.</button>
-                        </div>
-                        <div class="col-sm-4 text-center">
-                            <a target="_blank" href="https://familysearch.org/apps/product/littlefamilytree/android">
-                                <img class="fsicon" src="FS-Certified.png" border="0"/>
-                            </a>
-                        </div>
-                    </div>
+                <div class="col-sm-7 text-center">
+					<img src="little_family_tree.png" class="logo-text-img" />
+					<p>&nbsp;</p>
+                    <h2>Introducing the youngest minds to their heritage</h2>
                 </div>
             </div>
 
@@ -142,7 +106,53 @@
         </div>
     </div>
 </header>
+<section class="" style="line-height: 27px;" >
+	<div class="container">
+        <div class="row">
+			<div class="col-sm-6">
+				<p>
+					Little Family Tree engages toddlers and pre-school children with their personal heritage and family history
+					through photos, games, and activities designed for their level. (Most of the games are fun for the
+					kid in all of us.)
+				</p>
+				<p>The youngest children are just beginning to learn family relationships and are often interested in who they are and how they are connected to their family and the world at large. However, family history information and stories are rarely shared in a way that young children understand or find interesting.
+				</p>
+				<p>Today's children intuitively understand how to use touch devices such as smartphones and tablets. They use them to play, watch, and learn. The objective of Little Family Tree is to bring a child's personal family history to them through this learning medium and to share it in a way that is accessible to them.</p>
+                    
+			</div>
+			<div class="col-sm-6">
+            <p>
+                <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">
+                    <img width="150" src="ldstech2015.jpg" align="left" style="margin-right: 10px; "/>
+                </a>
+                Little Family Tree won 3rd place in the Children's category of the 2015
+                <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">LDSTech App and Game contest.</a>
+            </p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+				<p>
+					Personal family history information is obtained by having an adult login to an online family tree such as
+					<a href="http://www.familyearch.org">FamilySearch</a> or <a href="http://www.phpgedview.net">PhpGedView</a>.
+					An online family tree account is required to play the game but a <a href="http://www.familyearch.org">FamilySearch</a>
+					account can be obtained for free at <a href="http://www.familyearch.org">FamilySearch.org</a>.
+				</p>
 
+				<p>&nbsp;</p>
+				<div class="row">
+					<div class="col text-center">
+						<button type="button" onclick="window.location='familysearch.html'; return false;"
+								class="btn btn-primary">Learn more about our<br />FamilySearch
+							integration.</button>
+					&nbsp;&nbsp;
+						<a target="_blank" href="https://familysearch.org/apps/product/littlefamilytree/android">
+							<img class="fsicon" src="FS-Certified.png" border="0"/>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 <section class="bg-primary" id="video">
     <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
     <div class="container">
@@ -236,29 +246,15 @@
                 </a>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-offset-4 col-md-6">
-            <p>&nbsp;</p>
-            <p>
-                <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">
-                    <img width="150" src="ldstech2015.jpg" align="left" style="margin-right: 10px; "/>
-                </a>
-                Little Family Tree won 3rd place in the Children's category of the 2015
-                <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">LDSTech App and Game contest.</a>
-            </p>
-            </div>
-        </div>
     </div>
 </section>
 
-<section class="bg-info" id="about">
+<section class="bg-primary" id="about">
     <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About Little Family Tree</h2>
-                <hr class="primary">
-                <p>Little Family Tree is a product of <a href="http://www.yellowforktech.com">Yellow Fork Technologies LLC</a></p>
                 <p>&nbsp;</p>
             </div>
         </div>
@@ -274,7 +270,7 @@
             </div>
 
             <div class="contact-section col-lg-3 col-sm-4 text-center">
-                <address>Yellow Fork Technologies LLC
+                <address><a href="http://www.yellowforktech.com">Yellow Fork Technologies LLC</a>
                 <br />5526 W. 13400 S. #448
                 <br />Herriman, UT  84096</address>
             </div>
