--- a/website/index.html
+++ b/website/index.html
@@ -82,12 +82,12 @@
                         An iOS version will be available in early 2016.
                     </p>
                     <p>
-                        <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
+                        <a class="small-margin" href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
                             <img alt="Android app on Google Play" width="180"
                                  src="googel-play-badge.png" />
                         </a>
 
-                        <a href="http://www.amazon.com/gp/product/B014FPGQJO">
+                        <a class="small-margin" href="http://www.amazon.com/gp/product/B014FPGQJO">
                             <img alt="Android app on Amazon App Store" width="160"
                                  src="amazon-underground-app-us-black.png" />
                         </a>
@@ -98,7 +98,7 @@
                 <div class="col-sm-7 text-center">
 					<img src="little_family_tree.png" class="logo-text-img" />
 					<p>&nbsp;</p>
-                    <h2>Introducing the youngest minds to their heritage</h2>
+                    <h3>Introducing the youngest minds to their heritage</h3>
                 </div>
             </div>
 
@@ -128,24 +128,22 @@
                 Little Family Tree won 3rd place in the Children's category of the 2015
                 <a target="_blank" href="https://tech.lds.org/blog/729-winners-announced-for-the-gospel-app-a-game-contest">LDSTech App and Game contest.</a>
             </p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
+			<hr />
 				<p>
 					Personal family history information is obtained by having an adult login to an online family tree such as
 					<a href="http://www.familyearch.org">FamilySearch</a> or <a href="http://www.phpgedview.net">PhpGedView</a>.
 					An online family tree account is required to play the game but a <a href="http://www.familyearch.org">FamilySearch</a>
 					account can be obtained for free at <a href="http://www.familyearch.org">FamilySearch.org</a>.
 				</p>
-
 				<p>&nbsp;</p>
 				<div class="row">
 					<div class="col text-center">
 						<button type="button" onclick="window.location='familysearch.html'; return false;"
-								class="btn btn-primary">Learn more about our<br />FamilySearch
+								class="btn btn-primary small-margin">Learn more about our<br />FamilySearch
 							integration.</button>
 					&nbsp;&nbsp;
 						<a target="_blank" href="https://familysearch.org/apps/product/littlefamilytree/android">
-							<img class="fsicon" src="FS-Certified.png" border="0"/>
+							<img class="fsicon small-margin" src="FS-Certified.png" border="0"/>
 						</a>
 					</div>
 				</div>
