Fix website on ios

--- a/website/index.html
+++ b/website/index.html
@@ -78,6 +78,11 @@
             <div class="row">
                 <div class="col-sm-5 text-center">
                     <img class="main-icon" src="ic_launcher-web.png" border="0" />
+                    <div class="text-center small-title">
+                        <img src="little_family_tree.png" class="logo-text-img" />
+                        <h3>Introducing the youngest minds to their heritage</h3>
+                    </div>
+                    <p>&nbsp;</p>
                     <p class="beta">
                         An iOS version will be available in early 2016.
                     </p>
@@ -95,7 +100,7 @@
                     </p>
                     <p>&nbsp;</p>
                 </div>
-                <div class="col-sm-7 text-center">
+                <div class="col-sm-7 text-center large-title">
 					<img src="little_family_tree.png" class="logo-text-img" />
 					<p>&nbsp;</p>
                     <h3>Introducing the youngest minds to their heritage</h3>
