logos and website

--- a/website/index.html
+++ b/website/index.html
@@ -93,9 +93,15 @@
                         </a>
 
                         <a class="small-margin" href="http://www.amazon.com/gp/product/B014FPGQJO">
-                            <img alt="Android app on Amazon App Store" width="160"
+                            <img alt="Android app on Amazon App Store" width="180"
                                  src="amazon-underground-app-us-black.png" />
                         </a>
+						<!--
+						<a class="small-margin" href="https://itunes.apple.com/us/app/little-family-tree/id1077188098?ls=1&mt=8">
+                            <img alt="iOS App on the iTunes App Store" width="180"
+                                 src="iosAppStoreBadge.png" />
+                        </a>
+						-->
 
                     </p>
                     <p>&nbsp;</p>
