--- a/website/index.html
+++ b/website/index.html
@@ -24,6 +24,15 @@
     <![endif]-->
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -83,11 +92,6 @@
                         <h3>Introducing the youngest minds to their heritage</h3>
                     </div>
                     <p>&nbsp;</p>
-<!--
-                    <p class="beta">
-                        An iOS version will be available in early 2016.
-                    </p>
--->
                     <p>
                         <a class="small-margin" href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
                             <img alt="Android app on Google Play" width="180" height="53"
@@ -107,11 +111,12 @@
 
                     </p>
                     <p>&nbsp;</p>
+<div class="fb-page small" data-href="https://www.facebook.com/littlefamilytree" data-tabs="timeline" data-width="300" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/littlefamilytree"><a href="https://www.facebook.com/littlefamilytree">Little Family Tree</a></blockquote></div></div>
                 </div>
                 <div class="col-sm-7 text-center large-title">
 					<img src="little_family_tree.png" class="logo-text-img" />
-					<p>&nbsp;</p>
-                    <h3>Introducing the youngest minds to their heritage</h3>
+                    <h3 class="subtitle">Introducing the youngest minds to their heritage</h3>
+<div class="fb-page large" data-href="https://www.facebook.com/littlefamilytree" data-tabs="timeline" data-width="400" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/littlefamilytree"><a href="https://www.facebook.com/littlefamilytree">Little Family Tree</a></blockquote></div></div>
                 </div>
             </div>
 
