website updates sing a song part 3

--- a/website/familysearch.html
+++ b/website/familysearch.html
@@ -81,6 +81,9 @@
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="localevents.html">Local Event Resources</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
