--- a/website/index.html
+++ b/website/index.html
@@ -74,6 +74,9 @@
                 <li>
                     <a class="page-scroll" href="#about">About Us</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="localevents.html">Local Event Resources</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
