--- a/website/tree.html
+++ b/website/tree.html
@@ -77,6 +77,9 @@
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="localevents.html">Local Event Resources</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
