sing a song part 5

--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -103,23 +103,48 @@
         <div class="col-sm-8 col-lg-offset-1">
             <h3>Welcome!</h3>
             <p>
-                Little Family Tree engages toddlers and pre-school children with their personal family history through photos,
-                games, and activities designed for their level. (Most of the games are fun for the kid in all of us.)
-            </p>
-            <p>
-                Because it is designed for specially for pre-school children, there is very little
-                text used in the game.  Eveything is identified by icons and pictures.  The game
-                also uses a lot of audio cues to guide the player.  <strong>Turn UP the
-                volume</strong> on your device so that your child can hear the audio cues.
+                Little Family Tree engages young children with their personal family history in games
+                and activities designed for their level.
             </p>
             <p>
                 Playing with Little Family Tree will help children learn to:
-                <ol>
-                    <li>Identify family members by name, relationship, and picture</li>
-                    <li>Understand who and where they come from</li>
-                    <li>Recognize and navigate a family tree</li>
-                </ol>
+            <ol>
+                <li>Identify family members by name, relationship, and picture</li>
+                <li>Understand who and where they come from</li>
+                <li>Recognize and navigate a family tree</li>
+            </ol>
             </p>
+            <div class="row">
+                <div class="col-sm-8 col-lg-offset-1">
+                    <h3>Data</h3>
+                    <p>
+                        Data from your online family tree is loaded in the background over WiFi while your
+                        child plays.  As more data is loaded, more of your child's unique heritage is
+                        available for them to engage with and learn about.
+                        
+                        When the app is first loaded on a device, it does take some time for the data
+                        to populate the games.  We recommend playing several rounds of one of the
+                        photo games first, like scratch-off or watercolor to help the app download the
+                        data faster. Your child can also expand the family tree to download data on
+                        earlier generations faster.
+
+                        The parameters for loading data in the background can be managed via the app
+                        settings.
+                    </p>
+            <div class="row">
+                <div class="col-sm-8 col-lg-offset-1">
+                    <h3>Text and Sounds</h3>
+            <p>
+                Because it is designed especially for pre and early readers, there is very little
+                text used in the app.  Eveything is identified by icons and pictures.  The game
+                also uses a lot of audio cues to guide the player.  <strong>Turn UP the
+                volume</strong> on your device so that your child can hear the audio cues.
+            </p>
+                    <p>
+                    Sometimes, your child will play Little Family Tree in a location where the audio
+                        cues and game sounds need to be muted. An icon appears in the lower left
+                        corner of the game on start up. Click this icon to mute the game. The audio
+                        can also be changed at any time in the app settings.
         </div>
         <div class="col-sm-3 text-center">
             <img class="guide-image" src="little_family_logo.png" />
@@ -139,13 +164,6 @@
                 <a href="https://familysearch.org/learningcenter/lesson/how-to-add-photos-to-your-family-tree/1187" target="_blank">
                     Learn how to add photos to your FamilySearch Family Tree
                 </a>
-            </p>
-            <p>
-                Data from your online family tree is loaded in the background over WiFi while your
-                child plays.  As more data is loaded, more of your child's unique heritage is
-                available for them to engage with and learn about.
-                The parameters for loading data in the background can be managed via the app
-                settings.
             </p>
         </div>
         <div class="col-sm-3 text-center">
@@ -244,7 +262,7 @@
             <p>
                 From the settings you can manage your connection to your online family tree and
                 change synchronization settings.  You can also choose to hide people from your
-                online tree so that they do not show up in Little Family Tree.  You can also
+                online tree so that they do not show up in Little Family Tree.  You can
                 return to this parent's guide at anytime from the settings screen.
             </p>
         </div>
