--- a/website/index.html
+++ b/website/index.html
@@ -241,6 +241,14 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-3 col-sm-6 outer-game-box" id="song-box">
+                <a href="#" class="portfolio-box">
+                    <img src="game_icons/house_music_piano.png" id="song" class="img-responsive" alt="">
+                    <div class="game-box">
+                        Sing-A-Long
+                    </div>
+                </a>
+            </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="parentsguide-box">
                 <a href="parentsguide.html" class="portfolio-box">
                     <div class="game-box">
@@ -643,7 +651,28 @@
         id: 'treespy'
     };
 
-    var gameAnimations = [wardrobe, puzzle, watercolor, scratch, match, bubbles, treespy];
+    var song = {
+        images: [preload("game_icons/house_music_piano.png"),
+            preload("game_icons/house_music_piano1.png"),
+            preload("game_icons/house_music_piano1.png"),
+            preload("game_icons/house_music_piano2.png"),
+            preload("game_icons/house_music_piano2.png"),
+            preload("game_icons/house_music_piano3.png"),
+            preload("game_icons/house_music_piano3.png"),
+            preload("game_icons/house_music_piano2.png"),
+            preload("game_icons/house_music_piano2.png"),
+            preload("game_icons/house_music_piano1.png"),
+            preload("game_icons/house_music_piano1.png"),
+            preload("game_icons/house_music_piano.png")
+        ],
+        selectedImage: 0,
+        direction: 1,
+        animating: false,
+        href: 'song.html',
+        id: 'song'
+    };
+
+    var gameAnimations = [wardrobe, puzzle, watercolor, scratch, match, bubbles, treespy, song];
     var gameObjs = {
         "dressup-box": wardrobe,
         "puzzle-box": puzzle,
@@ -651,7 +680,8 @@
         "scratch-box": scratch,
         "match-box": match,
         "bubbles-box": bubbles,
-        "treespy-box": treespy
+        "treespy-box": treespy,
+        "song-box": song
     };
 
     $(document).ready(function() {
